[package]
name = "task-tui"
version = "0.1.0"
authors = ["Torben Clasen <t.clasen@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.19", features= [ "serde"]}
crossterm = { version="0.19.0", features= [ "serde"]}
rand = { version="0.8.3", default-features = false, features = ["std"] }
serde = { version="1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tui = { version="0.14.0", default-features = false, features = ['crossterm', 'serde'] }
