[package]
name = "task-tui"
version = "0.1.0"
authors = ["Torben Clasen <t.clasen@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.31", features= ["serde"] }
crossterm = { version="0.27.0", features= ["serde"] }
home = "0.5.5"
rand = { version="0.8.3", features = ["std"] }
serde = { version="1.0.125", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
ratatui = { version="0.24.0", features = ['serde','all-widgets'] }
unicode-width = "0.1.11"
